# src/models/Task/Task.js
@@ -8,6 +8,7 @@ const Task = new Schema(
     assignedTo: { type: 'ObjectId', required: true, ref: 'User' },
     boardId: { type: 'ObjectId', required: true, ref: 'Board' },
     statusId: { type: 'ObjectId', required: true, ref: 'Status' },
+    elapsedTime: { type: 'Number' },
   },
   {
     collection: 'Tasks',
@@ -18,6 +19,6 @@ const Task = new Schema(
 /**
  * Вычисляем прошедшее время от создания.
  */
-Task.virtual('elapsedTime').get(() => Date.now() - Date.parse(this.createdAt));
+// Task.virtual('elapsedTime').get(() => Date.now() - Date.parse(this.createdAt));
 
 module.exports = model('Task', Task);
