# src/swagger/output.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Canban API",
+    "title": "Kanban API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module.",
     "version": "1.0.0"
   },
@@ -778,24 +778,24 @@
     "SignUpCred": {
       "type": "object",
       "properties": {
-        "login": {
+        "email": {
           "type": "string",
           "example": "john@example.com"
-        },
-        "password": {
-          "type": "string",
-          "example": "12345678"
         },
         "name": {
           "type": "string",
           "example": "john"
+        },
+        "password": {
+          "type": "string",
+          "example": "12345678"
         }
       }
     },
     "UserLoginCred": {
       "type": "object",
       "properties": {
-        "login": {
+        "email": {
           "type": "string",
           "example": "john@example.com"
         },
@@ -895,11 +895,11 @@
         },
         "name": {
           "type": "string",
-          "example": "Super Task Name 1"
+          "example": "task 1"
         },
         "description": {
           "type": "string",
-          "example": "Super Task Description"
+          "example": "task 1 description"
         },
         "creator": {
           "type": "string",
@@ -946,11 +946,11 @@
       "properties": {
         "name": {
           "type": "string",
-          "example": "Super Task Name 1"
+          "example": "new task"
         },
         "description": {
           "type": "string",
-          "example": "Super Task Description"
+          "example": "new task description"
         },
         "assignedTo": {
           "type": "string",
@@ -963,6 +963,10 @@
         "statusId": {
           "type": "string",
           "example": "61e65dfa4327f14b2f7bf00e"
+        },
+        "elapsedTime": {
+          "type": "number",
+          "example": 0
         }
       }
     },
@@ -999,11 +1003,16 @@
       "properties": {
         "name": {
           "type": "string",
-          "example": "New status name"
+          "example": "new status name"
         },
-        "boardId": {
-          "type": "string",
-          "example": "61e65d624327f14b2f7bf00c"
+        "boardIds": {
+          "type": "array",
+          "example": [
+            "61e65d624327f14b2f7bf00c"
+          ],
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -1021,6 +1030,28 @@
         "email": {
           "type": "string",
           "example": "akrays@aspirity.com"
+        },
+        "avatarLink": {
+          "type": "string",
+          "example": "https://avatarSite/userAvatar.jpg"
+        },
+        "projectIds": {
+          "type": "array",
+          "example": [
+            "61e65d624327f14b2f7bf00c"
+          ],
+          "items": {
+            "type": "string"
+          }
+        },
+        "boardIds": {
+          "type": "array",
+          "example": [
+            "61e65d624327f14b2f7bf"
+          ],
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -1045,10 +1076,23 @@
           "type": "string",
           "example": "john@example.com"
         },
-        "projectsId": {
+        "avatarLink": {
+          "type": "string",
+          "example": "https://avatarSite/userAvatar.jpg"
+        },
+        "projectIds": {
           "type": "array",
           "example": [
             "61e65d624327f14b2f7bf00c"
+          ],
+          "items": {
+            "type": "string"
+          }
+        },
+        "boardIds": {
+          "type": "array",
+          "example": [
+            "61e65d624327f14b2f7bf"
           ],
           "items": {
             "type": "string"
